<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ToggleButton
        android:id="@+id/runTypeToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textOff="@string/slow"
        android:textOn="@string/rapid"/>

    <Spinner
        android:id="@+id/providerSpinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:entries="@array/provider_options"
        android:layout_below="@id/runTypeToggle"
        android:prompt="@string/select_provider"/>

    <EditText
        android:id="@+id/ipEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/providerSpinner"
        android:hint="@string/enter_ip_address"/>

    <Button
        android:id="@+id/sendPacketsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ipEditText"
        android:text="@string/send_packets"/>

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendPacketsButton"
        android:text="@string/download"/>
    <Button
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/downloadButton"
        android:text="@string/stop_process"/>

    <TextView
        android:id="@+id/informationLabel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="172dp" />


</RelativeLayout>
